JRADEV-16061: tests work locally