@@ -93,7 +93,6 @@
                 <version>3.5-m8</version>
                 <extensions>true</extensions>
                 <configuration>
-
                     <products>
                         <product>
                             <id>jira</id>
@@ -102,6 +101,7 @@
                             <httpPort>2990</httpPort>
                             <jvmDebugPort>5002</jvmDebugPort>
                             <dataPath>${project.basedir}/src/test/amps/jira1-generated-test-resources.zip</dataPath>
+							<jvmArgs>-Xmx768m -XX:MaxPermSize=300m</jvmArgs>
                         </product>
                         <product>
                             <id>jira</id>
@@ -110,6 +110,7 @@
                             <httpPort>2991</httpPort>
                             <jvmDebugPort>5003</jvmDebugPort>
                             <dataPath>${project.basedir}/src/test/amps/jira2-generated-test-resources.zip</dataPath>
+							<jvmArgs>-Xmx768m -XX:MaxPermSize=300m</jvmArgs>
                         </product>
                     </products>
                 </configuration>
